# agend-pty

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  fleet-instructions.md  fleet.yaml  opencode.json
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/steering/: agend-agend-pty-dev-t1492418741143867392.md  agend-k.md  agend-kiro.md
docs/: architecture.md
examples/: basic.yaml  code-review-pipeline.yaml  multi-agent.yaml  telegram.yaml  yaml_edit_poc.rs
src/: api.rs  backend.rs  bugreport.rs  channel.rs  config.rs  daemon.rs  demo.rs  doctor.rs  event_log.rs  features.rs  fleet_store.rs  git.rs  health.rs  inbox.rs  instructions.rs  lib.rs  main.rs  mcp.rs  mcp_bridge.rs  mcp_config.rs  paths.rs  quickstart.rs  scheduler.rs  state.rs  telegram.rs  tui.rs  util.rs  vterm.rs
tests/: cli-agents.sh  e2e.rs  integration.sh
