[package]
name = "agend-pty"
version = "0.1.0"
edition = "2021"

[lib]
name = "agend_pty_poc"
path = "src/lib.rs"

[[bin]]
name = "agend-daemon"
path = "src/daemon.rs"

[[bin]]
name = "agend-tui"
path = "src/tui.rs"

[[bin]]
name = "agend-mcp-bridge"
path = "src/mcp_bridge.rs"

[dependencies]
portable-pty = "0.9"
crossterm = "0.28"
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
alacritty_terminal = "0.26"
ctrlc = "3"
libc = "0.2"
isahc = "1"

[dev-dependencies]
tempfile = "3"
