[package]
name = "agend-pty"
version = "0.5.0"
edition = "2021"
license = "MIT"

[lints.clippy]
unwrap_used = "warn"

[lib]
name = "agend_pty_poc"
path = "src/lib.rs"

[[bin]]
name = "agend-pty"
path = "src/main.rs"

[[bin]]
name = "agend-daemon"
path = "src/daemon.rs"

[[bin]]
name = "agend-tui"
path = "src/tui.rs"

[[bin]]
name = "agend-mcp"
path = "src/mcp.rs"

[dependencies]
chrono = "0.4"
cron = "0.15"
portable-pty = "0.9"
crossterm = "0.28"
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
alacritty_terminal = "0.26"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
isahc = "1"

[dev-dependencies]
yaml-edit = "0.2"
tempfile = "3"
